# claude-code-workshop

./: .gitignore  README.md  presentation.md
.claude/: CLAUDE.md
part1-penny-lane/: INSTRUCTIONS.md  pyproject.toml
part2-magical-mystery-tour/: BRIEF.md  INSTRUCTIONS.md
part2-magical-mystery-tour/.claude/commands/: deploy.md
part2-magical-mystery-tour/data/: songs.csv
part3-abbey-road/: INSTRUCTIONS.md  pyproject.toml
part3-abbey-road/data/: streams.csv
part3-abbey-road/scripts/: load_streams.py
part3-abbey-road/tests/: test_load_streams.py
starter/: PRD.md  README.md  WORKSHOP.md  pyproject.toml
tier1-budget-tracker/: .gitignore  CLAUDE.md  INSTRUCTIONS.md  PRD.md  pyproject.toml
tier2-magical-mystery-setlist/: BRIEF.md  INSTRUCTIONS.md  pyproject.toml
tier2-savings-copilot/: BRIEF.md  INSTRUCTIONS.md  pyproject.toml
tier3-dev-workflows/: INSTRUCTIONS.md
tier3-dev-workflows/data/: streams.csv
vp-workshop/: README.md
vp-workshop/cards/: 00-say-hello.md  01-first-build.md  02-how-it-works.md  03-real-difference.md  04-share-it.md
vp-workshop/presentation-vp/: index.html  outline.md
vp-workshop/scripts/: make_messy_data.py
vp-workshop/starter/: CLAUDE.md
vp-workshop/starter/data/: feb.csv  jan.csv  mar.csv  notes.txt
