[project]
name = "magical-mystery-setlist"
version = "0.1.0"
description = "Magical Mystery Setlist - Concert Set Planner"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "plotly>=6.0",
    "python-multipart>=0.0.9",
    "pytest>=8.0",
    "httpx>=0.28",
]
